iptables
# Generated by iptables-save v1.4.7 on Tue Mar 19 08:06:28 2013
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 19 08:06:28 2013
# Generated by iptables-save v1.4.7 on Tue Mar 19 08:06:28 2013
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 19 08:06:28 2013
# Generated by iptables-save v1.4.7 on Tue Mar 19 08:06:28 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT 
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT 
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT 
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1798 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16509 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5900:6100 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 49152:49216 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9090 -j ACCEPT 
-A INPUT -p udp -m udp --dport 9090 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8250 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 7080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 111 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 111 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 2049 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 32803 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 32769 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 892 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 892 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 875 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 875 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 662 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 662 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22:80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 49152:49216 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5900:6100 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16509 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 49152:49216 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5900:6100 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 16509 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
COMMIT
# Completed on Tue Mar 19 08:06:28 2013
